// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Map/MarkerCircle Active 1`] = `
<button
  className="css-7y5osg-MarkerCircle"
  onClick={[Function]}
/>
`;

exports[`Storyshots Map/MarkerCircle Inactive 1`] = `
<button
  className="css-110f3qw-MarkerCircle"
  onClick={[Function]}
/>
`;
